fix(css&js): fixed house div from collapsing into itself when resizing window

--- a/src/main/resources/static/css/filter.css
+++ b/src/main/resources/static/css/filter.css
@@ -5,6 +5,7 @@
     border-radius: 0px;
     width: 100%;
     max-width: 250px;
+    min-width: 200px;
     height: 100%;
 }
 
