--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -14,6 +14,10 @@
     border-width: 0;
 }
 
+body {
+    min-width: 750px;
+}
+
 .main-grid-area {
     display: grid;
     grid-template-columns: 1fr 6fr;
